--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -13,6 +13,13 @@
 		padding: .5rem;
 		backdrop-filter: blur(10px);
 		border-radius: 1rem;
+		background-color: transparent;
+		border: 0;
+
+		&:hover{
+			cursor: pointer;
+			color: currentColor;
+		}
 	}
 
   .menu-cont {
