Home section done ✅

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,12 +1,16 @@
 #home{
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	align-items: center;
+	display: flex;
 
 	.home-cont{
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		column-gap: 5%;
+		width: 100%;
+
 		.profile{
 			display: flex;
 			justify-content: flex-end;
+			align-items: center;
 	
 			.profile-img{
 				border-radius: 70px;
@@ -15,7 +19,111 @@
 		}
 
 		.sumary{
-			
+			width: 50%;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+
+			.text{
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				margin-bottom: 1rem;
+
+				.iam{
+					font-size: 1rem;
+					font-weight: 400;
+					color: #6d6d6d;
+				}
+	
+				.name{
+					font-size: 2.5rem;
+					font-weight: 500;
+				}
+	
+				.developer{
+					font-size: 1.5rem;
+					font-weight: 400;
+					color: #6d6d6d;
+				}
+			}
+
+			.btns{
+				width: 100%;
+				display: flex;
+				justify-content: center;
+				gap: 1rem;
+				margin-bottom: 1rem;
+				
+				.cv{
+					width: 10rem;
+					background-color: transparent;
+					border: 1px solid;
+					padding: .5rem;
+					border-radius: 1rem;
+
+					&:hover{
+						cursor: pointer;
+					}
+				}
+
+				.contact{
+					width: 10rem;
+					border: 1px solid;
+					padding: .5rem;
+					border-radius: 1rem;
+
+					&:hover{
+						cursor: pointer;
+					}
+				}
+
+				.contact.dark-btn{
+					background-color: rgba(255, 255, 255, 0.87);
+					color: #242424;
+
+					&:hover{
+						opacity: .5;
+					}
+				}
+
+				.contact.ligth-btn{
+					background-color: #242424;
+					color: rgba(255, 255, 255, 0.87);
+
+					&:hover{
+						opacity: .5;
+					}
+				}
+			}
+
+			.rrss{
+				width: 100%;
+				display: flex;
+				justify-content: center;
+				gap: 2rem;
+
+				.rrss-btn{
+					background-color: transparent;
+					border: 0;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					width: 2rem;
+					height: 2rem;
+
+					&:hover{
+						cursor: pointer;
+						opacity: 0.5;
+					}
+
+					.rrss-icon{
+						width: 2em;
+						height: 2em;
+					}
+				}
+			}
 		}
 	}
 }
