--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -129,7 +129,10 @@
 }
 
 @media (max-width: 899px) {
-	#home .home-cont{
+	#home{
+		align-items: flex-start;
+
+		.home-cont{
 		display: flex;
 		flex-direction: column;
 		align-items: center;
@@ -159,13 +162,13 @@
 				.cv{
 					font-size: 1.25rem;
 					width: 15rem;
-					padding: 1rem;
+					padding: .5rem;
 				}
 
 				.contact{
 					font-size: 1.25rem;
 					width: 15rem;
-					padding: 1rem;
+					padding: .5rem;
 				}
 			}
 
@@ -181,6 +184,7 @@
 			}
 		}
 	}
+	} 
 }
 
 
