--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -196,8 +196,9 @@
 					height: 4em;
 
 					.rrss-icon{
-						width: 4em;
-						height: 4em;
+						width: 3em;
+						height: 3em;
+						stroke-width: 1;
 					}
 				}
 			}
