--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,7 @@
     position: fixed;
     display: flex;
     align-items: center;
+    border-radius: 10px;
     gap: 3px;
     bottom: 0;
     padding: 0.5rem;
@@ -71,6 +72,14 @@
   }
 }
 
+@media (min-width: 1920px) {
+  .app{
+    footer {
+      margin: 0.5rem 15%;
+    }
+  }
+}
+
 @media (min-width: 2250px) {
   .app {
     section {
@@ -90,6 +99,9 @@ MEDIA QUERYS
 
 }
 
+@media (min-width: 1920px) {
+
+}
 
 @media (min-width: 2250px) {
 
