--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -30,7 +30,7 @@
 				gap: 1rem;
 
 				.exp-element{
-					width: 275px;
+					width: auto;
 					border: 1px solid #6d6d6d;;
 					border-radius: 20px;
 					padding: 1rem;
@@ -50,21 +50,23 @@
 						flex-direction: column;
 						justify-content: center;
 						align-items: center;
-						gap: 1rem;
 
 						.exp-tittle{
 							font-size: .8rem;
+							margin-bottom: 1rem;
 						}
 
 						.exp-description{
 							font-size: .7rem;
 							color: #6d6d6d;
+							margin-bottom: .5rem;
 						}
 
 						.exp-description-bold{
 							font-size: .8rem;
 							color: #6d6d6d;
 							font-weight: 600;
+							margin-bottom: 1rem;
 						}
 
 						.exp-btn{
@@ -93,13 +95,57 @@
 	}
 }
 
-@media (max-width: 899px) {
+@media (max-width: 900px) {
+	#about{
+		.about-cont{
+			display: flex;
+			flex-direction: column-reverse;
 
+			.about-img-section{
+				justify-content: flex-end;
+				position: relative;
+				.about-img{
+					position: absolute;
+					bottom: 29px;
+					right: 0;
+					width: 150px;
+					border-radius: 26px;
+				}
+			}
+
+			.about-text-section{
+				.experience-elements{
+					gap: 2rem;
+					.exp-element{
+						padding: .5rem;
+					}
+				}
+
+				.experience-text{
+					width: 80%;
+				}
+			}
+		}
+	}
 }
 
-@media (min-width: 1920px) {
+@media ( min-width: 1920px) {
 	#about{
 		padding: 5rem 15%;
+
+		.about-cont{
+			.about-text-section{
+				.experience-element{
+					justify-items: center;
+					gap: 1rem;
+				}
+				.experience-text{
+					.text{
+						font-size: 1rem;
+					}
+				}
+			}
+		}
 	}
 }
 
