--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -128,7 +128,7 @@
 	}
 }
 
-@media (max-width: 899px) {
+@media (max-width: 500px) {
 	#home{
 		align-items: flex-start;
 
@@ -207,6 +207,85 @@
 	} 
 }
 
+@media (min-width: 501px) and (max-width: 900px) {
+	#home{
+		/* align-items: flex-start; */
+
+		.home-cont{
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		justify-content: center;
+		gap: 0;
+
+		.profile{
+			padding: 2rem;
+
+			.profile-img{
+				height: 250px;
+			}
+		}
+
+		.sumary{
+			width: 100%;
+
+			.text{
+				line-height: 1.5;
+				margin-bottom: 2rem;
+			}
+
+			.btns{
+				flex-direction: column;
+				align-items: center;
+				margin-bottom: 2rem;
+
+				.cv{
+					font-size: 1.25rem;
+					width: 15rem;
+					padding: .5rem;
+				}
+
+				.contact{
+					font-size: 1.25rem;
+					width: 15rem;
+					padding: .5rem;
+				}
+			}
+
+			.rrss{
+				.rrss-btn{
+					width: 3rem;
+					height: 3rem;
+					.rrss-icon{
+						width: 3em;
+						height: 3em;
+					}
+				}
+			}
+
+			.small-btns{
+				width: 100%;
+				display: flex;
+				flex-direction: row;
+				justify-content: space-evenly;
+
+				.rrss-small-btn{
+					background-color: transparent;
+					border: 0;
+					width: 4em;
+					height: 4em;
+
+					.rrss-icon{
+						width: 3em;
+						height: 3em;
+						stroke-width: 1;
+					}
+				}
+			}
+		}
+	}
+	} 
+}
 
 @media (min-width: 2250px) {
 	#home .home-cont{
