--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,14 @@
   }
 }
 
+@media (max-width: 500px) {
+  .app{
+      footer {
+      margin: 0 5%;
+    }
+  }
+}
+
 @media (min-width: 1920px) {
   .app{
     footer {
