--- a/src/styles/Skills.css
+++ b/src/styles/Skills.css
@@ -38,7 +38,6 @@
 				border-radius: 1rem;
 
 				.skill-tittle-section{
-					width: 70%;
 					display: flex;
 					flex-direction: row;
 					align-items: center;
@@ -90,17 +89,113 @@
 }
 
 @media (max-width: 500px) {
+	#skills{
+		.section{
+			gap: 3rem;
 
+			.skills-cont{
+				display: flex;
+				flex-direction: column;
+				gap: 2rem;
+
+				.skills-element{
+					width: 100%;
+				}
+			}
+		}
+	}
 }
 
 @media (min-width: 501px) and (max-width: 900px) {
-	
+	#skills{
+		.section{
+			.name-section{
+				.section-subtitle{
+					display: none;
+				}
+			}
+
+			.skills-cont{
+				.skills-element{
+					.skill-tittle-section{
+						.skill-icon{
+							height: 1.6rem;
+						}
+
+						.skill-tittle{
+							font-size: 1.2rem;
+						}
+					}
+
+					.skill-tech-section{
+						.tech-item{
+							.tech{
+								font-size: .9rem;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
 }
 
-@media (min-width: 1920px) {
-
+@media (min-width: 1920px) and (max-width: 2249px) {
+	#skills{
+		.section{
+			width: 100%;
+			padding: 5rem 15%;
+		}
+	}
 }
 
-@media (min-width: 2250) {
+@media (min-width: 2250px) {
+	#skills{
+		.section{
+			width: 100%;
 
+			.name-section{
+				.section-subtitle{
+					font-size: 1.5rem;
+				}
+
+				.section-title{
+					font-size: 2.5rem;
+				}
+			}
+
+			.skills-cont{
+				.skills-element{
+					.skill-tittle-section{
+						.skill-icon{
+							width: 2.5rem;
+							height: 2.5rem;
+						}
+
+						.skill-tittle{
+							font-size: 2.5rem;
+						}
+					}
+
+					.skill-tech-section{
+						gap: 2rem;
+						padding: 2rem;
+
+						.tech-item{
+							gap: 1.5rem;
+
+							.check-icon{
+								height: 1.8rem;
+								width: 1.8rem;
+							}
+
+							.tech{
+								font-size: 1.8rem;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
 }
