--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -25,7 +25,91 @@
 		}
 
 		.projects-cont{
-			
+			width: 100%;
+			display: flex;
+			flex-direction: row-reverse;
+			flex-wrap: wrap;
+			gap: 1rem;
+
+			.project-element{
+				padding: 1rem .5rem;
+				display: flex;
+				flex-direction: column;
+				flex: .2;
+				border: 1px solid #6d6d6d;
+				border-radius: 1.5rem;
+				
+				.project-title-cont{
+					display: flex;
+					flex-direction: row;
+					justify-content: center;
+
+					.project-title{
+						font-size: 1.2rem;
+						font-weight: 600;
+					}
+				}
+
+				.project-img{
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					padding: .5rem;
+					margin: .5rem 0;
+					
+					.img{
+						border-radius: 1rem;
+						height: 12rem;
+						width: 12rem;
+					}
+				}
+
+				.project-text{
+					height: 100%;
+					display: flex;
+					flex-direction: column;
+					justify-content: center;
+					align-items: center;
+					gap: 1rem;
+					padding: 0 .5rem;
+
+					.project-description{
+						font-size: 1rem;
+						text-align: center;
+					}
+
+					.project-technologies{
+						display: flex;
+						flex-direction: row;
+						gap: 1rem;
+
+						.tech-icon{
+							height: 1.5em;
+							width: 1.5em;
+						}
+					}
+
+					.project-btns{
+						width: 100%;
+						display: flex;
+						flex-direction: row;
+						justify-content: center;
+						gap: 1rem;
+
+						.btn{
+							width: 100%;
+							background-color: transparent;
+							border: 1px solid #6d6d6d;
+							border-radius: 1rem;
+							padding: .5rem;
+
+							&:hover{
+								cursor: pointer;
+							}
+						}
+					}
+				}
+			}
 		}
 	}
 }
