--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -25,95 +25,108 @@
 
 		.about-cont{
 			display: grid;
-			grid-template-columns: .5fr 1.5fr;
+			grid-template-rows: auto auto;
 			width: 100%;
-	
-			.about-img-section{
-				padding: 2rem;
+
+			.top-row{
 				display: flex;
-				justify-content: center;
-				align-items: center;
-	
-				.about-img{
-					width: 300px;
-					border-radius: 52px;
-				}
-			}
-	
-			.about-text-section{
-				display: flex;
-				justify-content: center;
-				flex-direction: column;
-				gap: 2rem;
-	
-				.experience-elements{
-					display: grid;
-					grid-template-columns: 1fr 1fr 1fr;
-					gap: 1rem;
-	
-					.exp-element{
-						width: auto;
-						border: 1px solid #6d6d6d;;
+				flex-direction: row;
+				padding: 1rem;
+				gap: 1rem;
+
+				.about-img-section{
+					display: flex;
+					justify-content: flex-end;
+					align-items: center;
+		
+					.about-img{
+						width: 240px;
 						border-radius: 20px;
-						padding: 1rem;
-						display: flex;
-						align-items: center;
-						flex-direction: column;
+					}
+				}
+		
+				.about-text-section{
+					display: flex;
+					justify-content: center;
+					flex-direction: column;
+					gap: 2rem;
+		
+					.experience-elements{
+						display: grid;
+						grid-template-columns: 1fr 1fr 1fr;
 						gap: 1rem;
-						
-						.exp-icon{
-							width: 1.5em;
-							height: 1.5em;
-							stroke-width: 1;
-						}
-	
-						.exp-text{
+		
+						.exp-element{
+							width: auto;
+							border: 1px solid #6d6d6d;;
+							border-radius: 20px;
+							padding: 1rem;
 							display: flex;
-							flex-direction: column;
-							justify-content: center;
 							align-items: center;
-	
-							.exp-title{
-								font-size: .8rem;
-								margin-bottom: 1rem;
+							flex-direction: column;
+							gap: 1rem;
+							
+							.exp-icon{
+								width: 1.5em;
+								height: 1.5em;
+								stroke-width: 1;
 							}
-	
-							.exp-description{
-								font-size: .7rem;
-								color: #6d6d6d;
-								margin-bottom: .5rem;
-							}
-	
-							.exp-description-bold{
-								font-size: .8rem;
-								color: #6d6d6d;
-								font-weight: 600;
-								margin-bottom: 1rem;
-							}
-	
-							.exp-btn{
-								background-color: transparent;
-								border: 1px solid #6d6d6d;
-								padding: .5rem;
-								border-radius: 10px;
-								font-size: .8rem;
-								width: 150px;
-	
-								&:hover{
-									cursor: pointer;
+		
+							.exp-text{
+								display: flex;
+								flex-direction: column;
+								justify-content: center;
+								align-items: center;
+		
+								.exp-title{
+									font-size: 1rem;
+									margin-bottom: 1rem;
+								}
+		
+								.exp-description{
+									font-size: .9rem;
+									color: #6d6d6d;
+									margin-bottom: .5rem;
+								}
+		
+								.exp-description-bold{
+									font-size: 1rem;
+									color: #6d6d6d;
+									font-weight: 600;
+									margin-bottom: 1rem;
+									text-align: center;
+								}
+		
+								.exp-btn{
+									background-color: transparent;
+									border: 1px solid #6d6d6d;
+									padding: .5rem;
+									border-radius: 10px;
+									font-size: .8rem;
+									width: 150px;
+		
+									&:hover{
+										cursor: pointer;
+									}
 								}
 							}
 						}
 					}
 				}
-	
-				.experience-text{
-					.text{
-						font-size: .8rem;
-						line-height: 1.5;
-					}
-				}
 			}
+
+			.bot-row{
+				padding: 1rem;
+
+				.experience-text{
+						.text{
+							font-size: 1rem;
+							line-height: 1.5;
+						}
+					}
+			}
+	
+			
 		}
 	}
 }
