--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -3,7 +3,7 @@
   .section {
     display: grid;
     grid-template-rows: auto auto;
-    row-gap: 1rem;
+    row-gap: 2rem;
 
     .name-section {
       display: flex;
@@ -27,13 +27,13 @@
       display: grid;
       grid-template-columns: 1fr 1fr;
       grid-template-rows: auto;
-      gap: 3rem;
+      gap: 8rem 3rem;
       padding: 1rem 10%;
 
       .project-element {
 				position: relative;
         width: 100%;
-				height: 500px;
+				height: 350px;
         display: flex;
         flex-direction: column;
 
@@ -73,13 +73,13 @@
 					flex-direction: column;
 					justify-content: center;
 					width: 100%;
-					top: 40%;
+					top: 35%;
 
 					.project-title-cont {
 						display: flex;
 						flex-direction: row;
 						justify-content: center;
-						margin-bottom: 2rem;
+						margin-bottom: 1rem;
 
 						.project-title {
 							font-size: 2rem;
@@ -107,6 +107,7 @@
 						.project-technologies {
 							position: absolute;
 							top: 165px;
+							right: 20px;
 							display: flex;
 							flex-direction: row;
 							gap: 1.3rem;
@@ -119,12 +120,13 @@
 
 						.project-btns {
 							position: absolute;
-							top: -75px;
-							right: 50px;
-							width: 30px;
+							top: 165px;
+							left: 0px;
+							width: 100px;
 							display: flex;
 							flex-direction: row;
 							justify-content: center;
+							border-bottom-left-radius: 1.2rem;
 
 							.btn {
 								display: flex;
