MQ projects mobile casi done!

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -154,7 +154,12 @@
 						.experience-elements{
 							display: flex;
 							flex-direction: column;
-							padding: 0 1.5rem;
+
+							.exp-element{
+								.exp-text{
+									text-align: center;
+								}
+							}
 						}
 					}
 				}
