--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -70,6 +70,7 @@
 					position: absolute;
 					bottom: 10px;
 					right: 10px;
+					backdrop-filter: blur(5px);
 
 					&:hover{
 						cursor: pointer;
