--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -95,6 +95,7 @@
 						align-items: center;
 						gap: 2rem;
 						padding: 0 0.5rem;
+						line-height: 1.5;
 
 						.project-description {
 							font-size: 1rem;
