--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -87,6 +87,7 @@
 			display: flex;
 			flex-direction: row;
 			align-items: center;
+			justify-content: space-around;
 			gap: 4rem;
 			border: 1px solid #6d6d6d;
 			padding: 1rem;
